--- a/WEBSITE/HTML/About us.html
+++ b/WEBSITE/HTML/About us.html
@@ -1,15 +1,27 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-  <title>First site</title>
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+    <title>About Crazy Crêpe's Bar</title>
+    <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
   </head>
+
   <body>
+    <div id="navbar" class="sticky">
+      <a href="index.html">HOME </a>
+      <a href="About us.html">ABOUT US</a>
+      <a href="Menu.html">MENU</a>
+      <a href="Contact us.html">CONTACT US</a>
+      <a class="title" style="float:right"> Crazy Crepes</a>
+
+      <h1>Crazy Crepes</h1>
+      <h2>Any topping you want - we don't give a crepe!</h2>
+    </div>
+
     <div>
       <h1>Hello World</h1>
       <h2>Welcome to my site!</h2>
 
-      <img src="duck.jpg" height="100px">
     </div>
 
     <div>
@@ -17,28 +29,13 @@
       internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
       Everyone should learn to code, here are some pretty good reasons why...</p>
 
-    <ol>
-      <li> HTML is cool</li>
-      <li id="lower"> CSS is cooler</li>
-      <li id="lowest"> JS is the best</li>
-    </ol>
-    </div>
+      <div id='social-buttons'>
+        <button class='btn btn-lg btn-twitter'>Twitter</button>
+        <button class='btn btn-lg btn-facebook'>Facebook</button>
+        <button class='btn btn-lg btn-pinterest'>Pinterest</button>
+      </div>
 
-    <div class="contrast">
-      <h2><em> What do you need to create a website? </em></h2>
-
-      <p> Not much! </p>
-
-      <ul>
-      <li> A computer is always a good start</li>
-      <li> A text editor (I am using atom)</li>
-      <li> A web browser (I am using chrome)</li>
-      <li> Some HTML, CSS, and JS files</li>
-      </ul>
-    </div class="contrast">
-
-    <p> Follow my progress on <a href="https://github.com/">github</a>
-
+      <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
   </body>
 
 
