--- a/WEBSITE/HTML/index.html
+++ b/WEBSITE/HTML/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Crazy Crêpe's Menu</title>
+  <title>Crazy Crêpe's Bar</title>
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
   </head>
 
   <body>
+
     <div id="navbar" class="sticky">
       <a href="index.html">HOME </a>
       <a href="About us.html">ABOUT US</a>
@@ -14,10 +15,25 @@
       <a href="Contact us.html">CONTACT US</a>
       <a class="title" style="float:right"> Crazy Crepes</a>
 
-      <h1>Menu</h1>
+      <h1>Crazy Crepes</h1>
       <h2>Any topping you want - we don't give a crepe!</h2>
     </div>
 
+      <header>
+        <h1>Welcome to Crazy Crepes!</h1>
+        <h2>"Any topping you want - we don't give a crepe!"</h2>
+      </header>
+
+    <div class="container">
+      <img src="Images/Crepe-Cake.jpg">
+    </div>
+
+    <div class="centered" text="WE LOVE CREPES">
+    </div>
+    <div class="text-block">
+        <h3> About us </h3>
+        <p> We make crepes </p>
+    </div>
 
     <div id='social-buttons'>
       <button class='btn btn-lg btn-twitter'>Twitter</button>
@@ -27,6 +43,4 @@
 
     <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
   </body>
-
-
 </html>
