Navbar "sticky" v1 (+meta viewport)
Added CCS about navbar to make it "sticky", including javascript (untested)

+Added meta viewport to all pages in head so webpage adapts to device width

--- a/WEBSITE/HTML/About us.html
+++ b/WEBSITE/HTML/About us.html
@@ -4,6 +4,8 @@
     <title>About Crazy Crêpe's Bar</title>
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+
   </head>
 
   <body>
@@ -14,8 +16,7 @@
       <a href="Contact us.html">CONTACT US</a>
       <a class="title" style="float:right"> Crazy Crepes</a>
 
-      <h1>Crazy Crepes</h1>
-      <h2>Any topping you want - we don't give a crepe!</h2>
+      <h1>About us</h1>
     </div>
 
     <div>
