--- a/WEBSITE/HTML/Contact us.html
+++ b/WEBSITE/HTML/Contact us.html
@@ -4,18 +4,26 @@
     <title>Contact Us at Crazy Crêpe's</title>
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+
   </head>
 
   <body>
     <div id="navbar" class="sticky">
-      <a href="HTML/Home.html">HOME </a>
-      <a href="HTML/About us.html">ABOUT US</a>
-      <a href="HTML/Menu.html">MENU</a>
-      <a href="HTML/Contact us.html">CONTACT US</a>
+      <a href="index.html">HOME </a>
+      <a href="About us.html">ABOUT US</a>
+      <a href="Menu.html">MENU</a>
+      <a href="Contact us.html">CONTACT US</a>
       <a class="title" style="float:right"> Crazy Crepes</a>
 
       <h1>Contact Us</h1>
     </div>
+
+    <form role='form'>
+        <label for="email">Find out more</label>
+        <input type="text" name="email" >
+        <button class="btn btn-success" type="submit">Send</button>
+      </form>
 
 
     <div id='social-buttons'>
