--- a/WEBSITE/HTML/Menu.html
+++ b/WEBSITE/HTML/Menu.html
@@ -4,6 +4,8 @@
     <title>Crazy Crêpe's Menu</title>
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+
   </head>
 
   <body>
@@ -15,9 +17,9 @@
       <a class="title" style="float:right"> Crazy Crepes</a>
 
       <h1>Menu</h1>
-      <h2>Any topping you want - we don't give a crepe!</h2>
     </div>
 
+      <h2>Any topping you want - we don't give a crepe!</h2>
 
     <div id='social-buttons'>
       <button class='btn btn-lg btn-twitter'>Twitter</button>
