--- a/WEBSITE/HTML/index.html
+++ b/WEBSITE/HTML/index.html
@@ -4,10 +4,11 @@
   <title>Crazy Crêpe's Bar</title>
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+
   </head>
 
   <body>
-
     <div id="navbar" class="sticky">
       <a href="index.html">HOME </a>
       <a href="About us.html">ABOUT US</a>
@@ -15,13 +16,12 @@
       <a href="Contact us.html">CONTACT US</a>
       <a class="title" style="float:right"> Crazy Crepes</a>
 
-      <h1>Crazy Crepes</h1>
-      <h2>Any topping you want - we don't give a crepe!</h2>
+      <h1>Crazy Crêpe's Bar</h1>
     </div>
 
       <header>
-        <h1>Welcome to Crazy Crepes!</h1>
-        <h2>"Any topping you want - we don't give a crepe!"</h2>
+        <h3>Welcome to Crazy Crêpe's Bar!</h3>
+        <blockquote>Any topping you want - we don't give a crepe!</blockquote>
       </header>
 
     <div class="container">
