--- a/WEBSITE/HTML/index.html
+++ b/WEBSITE/HTML/index.html
@@ -14,7 +14,6 @@
       <a href="About us.html">ABOUT US</a>
       <a href="Menu.html">MENU</a>
       <a href="Contact us.html">CONTACT US</a>
-      <a class="title" style="float:right"> Crazy Crepes</a>
 
       <h1>Crazy Crêpe's Bar</h1>
     </div>
@@ -25,7 +24,7 @@
       </header>
 
     <div class="container">
-      <img src="Images/Crepe-Cake.jpg">
+      <img src="../Images/Crepe-Cake.jpg">
     </div>
 
     <div class="centered" text="WE LOVE CREPES">
