--- a/WEBSITE/HTML/About us.html
+++ b/WEBSITE/HTML/About us.html
@@ -32,6 +32,7 @@
       <div id='social-buttons'>
         <button class='btn btn-lg btn-twitter'>Twitter</button>
         <button class='btn btn-lg btn-facebook'>Facebook</button>
+        <button class='btn btn-lg btn-facebook'>Instagram</button>
         <button class='btn btn-lg btn-pinterest'>Pinterest</button>
       </div>
 
