--- a/WEBSITE/HTML/Contact us.html
+++ b/WEBSITE/HTML/Contact us.html
@@ -69,6 +69,7 @@
       <div id='social-buttons'>
         <button class='btn btn-lg btn-twitter float_right'>Twitter</button>
         <button class='btn btn-lg btn-facebook float_right'>Facebook</button>
+        <button class='btn btn-lg btn-facebook'>Instagram</button>
         <button class='btn btn-lg btn-pinterest float_right'>Pinterest</button>
       </div>
     </div>
