--- a/WEBSITE/HTML/Contact us.html
+++ b/WEBSITE/HTML/Contact us.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-
   </head>
 
   <body>
@@ -19,7 +18,16 @@
     </div>
 
     <div>
-    <br><br><br><br>
+    <br><br><br><br><br>
+    </div>
+
+    <div>
+      <h2> <strong> We're coming soon to Manchester! </strong> </h2>
+    </div>
+
+    <div class="googlemaps">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4748.357480891359!2d-2.2477688719431033!3d53.4831360700315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bb1c6e9027dcb%3A0xe9d04f888fea23e8!2sCentral%20Retail%20District%2C%20Manchester!5e0!3m2!1sen!2suk!4v1574693659426!5m2!1sen!2suk"
+      width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
 
     <div class="page_content_wrapper" style="min-height: 800px;">
@@ -50,13 +58,13 @@
 
 		    <div class="half_width float_right">
 			     <h2>Call Our Team</h2>
-			     <p> Coming soon! </p>
+			     <p>Coming soon! (as soon as we're set up)</p>
            <br>
 			     <h2>Email Us</h2>
 			     <p>crazycrepesbar@gmail.com</p>
 		    </div>
 
-			   <br><br><br><br><br>
+			   <br><br><br>
 	     </div>
     </div>
 
@@ -69,7 +77,7 @@
       <div id='social-buttons'>
         <button class='btn btn-lg btn-twitter float_right'>Twitter</button>
         <button class='btn btn-lg btn-facebook float_right'>Facebook</button>
-        <button class='btn btn-lg btn-facebook'>Instagram</button>
+        <button class='btn btn-lg btn-Instagram float_right'>Instagram</button>
         <button class='btn btn-lg btn-pinterest float_right'>Pinterest</button>
       </div>
     </div>
