--- a/WEBSITE/HTML/Menu.html
+++ b/WEBSITE/HTML/Menu.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-
   </head>
 
   <body>
@@ -18,12 +17,33 @@
       <h1>Menu</h1>
     </div>
 
-      <h2>Any topping you want - we don't give a crepe!</h2>
+    <div id="menu_block">
+      <br><br><br><br><br>
+      <h2>Any topping you want - we don't give a crepe!</h2><br>
+      <h4>You can find a pdf version of the menu here <a href=""> </a> </h4>
+
+<!--the divs are arranged in a 2x2 grid-->
+      <div class="twobytwo">
+        <h3>Sweet</h3>
+      </div>
+
+      <div class="twobytwo">
+        <h3>Savoury</h3>
+      </div>
+
+      <div class="twobytwo">
+        <h3>Drinks</h3>
+      </div>
+
+      <div class="twobytwo">
+        <h3>Our Team Recommendations</h3>
+      </div>
+    </div>
 
     <div id='social-buttons'>
       <button class='btn btn-lg btn-twitter'>Twitter</button>
       <button class='btn btn-lg btn-facebook'>Facebook</button>
-      <button class='btn btn-lg btn-facebook'>Instagram</button>
+      <button class='btn btn-lg btn-Instagram'>Instagram</button>
       <button class='btn btn-lg btn-pinterest'>Pinterest</button>
     </div>
 
