--- a/WEBSITE/HTML/About us.html
+++ b/WEBSITE/HTML/About us.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-
   </head>
 
   <body>
@@ -20,19 +19,21 @@
 
     <div>
       <h1>Hello World</h1>
-      <h2>Welcome to my site!</h2>
+      <h2>Welcome to our site!</h2>
 
     </div>
 
+<!--could use class 'twobytwo' to separate divs in an arranged in a 2x2 grid, for the 4 of us?-->
+
     <div>
-      <p>I am currently learning to code with <a href="https://www.codefirstgirls.org.uk/">Code First Girls</a>. Going over everything from how the
+      <p>We am currently learning to code with <a href="https://www.codefirstgirls.org.uk/">Code First Girls</a>. Going over everything from how the
       internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
       Everyone should learn to code, here are some pretty good reasons why...</p>
 
       <div id='social-buttons'>
         <button class='btn btn-lg btn-twitter'>Twitter</button>
         <button class='btn btn-lg btn-facebook'>Facebook</button>
-        <button class='btn btn-lg btn-facebook'>Instagram</button>
+        <button class='btn btn-lg btn-Instagram'>Instagram</button>
         <button class='btn btn-lg btn-pinterest'>Pinterest</button>
       </div>
 
