--- a/WEBSITE/HTML/index.html
+++ b/WEBSITE/HTML/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-
   </head>
 
   <body>
@@ -17,29 +16,69 @@
 
       <h1>Crazy Crêpe's Bar</h1>
     </div>
-
-      <header>
+    <br><br><br><br><br>
+    <header>
         <h3>Welcome to Crazy Crêpe's Bar!</h3>
-        <blockquote>Any topping you want - we don't give a crepe!</blockquote>
-      </header>
+        <blockquote>"Any topping you want - we don't give a crepe!"</blockquote>
+    </header>
 
-    <div class="container">
-      <img src="../Images/Crepe-Cake.jpg">
+<!--For some reason the carousel just shows all the images,
+and they still float above the nav bar when scrolling...
+tempted to give up and do thumbnail images haha-->
+
+    <div id="carouselIndicators" class="carousel slide" data-ride="carousel" data-pause="hover" data-interval="300">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-95" src="../Images/Crepe-Cake-cropped.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-95" src="../Images/bar-med.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-95" src="../Images/relaxwindow-med.JPG" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
-    <div class="centered" text="WE LOVE CREPES">
-    </div>
     <div class="text-block">
-        <h3> About us </h3>
-        <p> We make crepes </p>
+        <h3>Facilities</h3>
+        <p>We have our crepe bar - where you can relax and watch the hot plates in action.
+          Plenty of tables for you to order your preferred crepe with a splash of wine, we won't judge...
+          We have a private downstairs room, perfect for any kind of event you have in mind.
+          And of course didn't we mention? We make crepes! </p>
+
+        <h3>Delicious Deals</h3>
+        <li>Monday Munchies </li>
+        <li>Twofer Tuesdays (2 for 1)</li>
+        <li>Wacky Wednesdays (suprises on offer)</li>
+        <li>Thank god for Twofer Thursdays (2 for 1, twice in a week!)</li>
+        <li>Fancy Fridays (Gin and Wine discounts)</li>
+        <li>Super Saturdays </li>
+        <li>Savour Sundays (10% off our savoury selection)</li>
     </div>
 
     <div id='social-buttons'>
       <button class='btn btn-lg btn-twitter'>Twitter</button>
       <button class='btn btn-lg btn-facebook'>Facebook</button>
+      <button class='btn btn-lg btn-Instagram'>Instagram</button>
       <button class='btn btn-lg btn-pinterest'>Pinterest</button>
     </div>
 
+    <script src="../JS/bootstrap.min.js"> </script>
+    <script src="../JS/navbar.js"> </script>
     <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
   </body>
 </html>
