--- a/WEBSITE/HTML/About us.html
+++ b/WEBSITE/HTML/About us.html
@@ -19,15 +19,58 @@
     </div>
 
     <div>
-      <h1>Hello World</h1>
-      <h2>Welcome to my site!</h2>
+      <h1>About Us</h1>
+      <h2>Who are we?</h2>
 
     </div>
 
-    <div>
-      <p>I am currently learning to code with <a href="https://www.codefirstgirls.org.uk/">Code First Girls</a>. Going over everything from how the
-      internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
-      Everyone should learn to code, here are some pretty good reasons why...</p>
+  <div class= "twobytwo">
+    <div class="names">
+      <p>Caroline</p>
+    </div>
+
+    <div class="text">
+      <blockquote>
+      <p>Blah blah Blah</p>
+      </blockquote>
+    </div>
+  </div>
+
+  <div class= "twobytwo">
+    <div class="names">
+      <p>Kirsty</p>
+    </div>
+
+    <div class="text">
+      <blockquote>
+      <p>Blah blah Blah</p>
+      </blockquote>
+    </div>
+  </div>
+
+  <div class= "twobytwo">
+    <div class="names">
+      <p>Gabrielle</p>
+    </div>
+
+    <div class="text">
+        <blockquote>
+        <p>Blah blah Blah</p>
+        </blockquote>
+    </div>
+  </div>
+
+  <div class= "twobytwo">
+    <div class="names">
+      <p>Olivia</p>
+    </div>
+
+    <div class="text">
+      <blockquote>
+      <p>Blah blah Blah</p>
+      </blockquote>
+    </div>
+  </div>
 
       <div id='social-buttons'>
         <button class='btn btn-lg btn-twitter'>Twitter</button>
