Nav bar changes

--- a/WEBSITE/HTML/About us.html
+++ b/WEBSITE/HTML/About us.html
@@ -9,33 +9,75 @@
 
   <body>
     <div id="navbar" class="sticky">
-      <a href="index.html">HOME </a>
-      <a href="About us.html">ABOUT US</a>
-      <a href="Menu.html">MENU</a>
       <a href="Contact us.html">CONTACT US</a>
+      <a href="Menu.html">MENU</a>
+      <a href="About us.html">ABOUT US</a>
+      <a href="index.html">HOME </a>
 
       <h1>About us</h1>
     </div>
 
     <div>
-      <h1>Hello World</h1>
-      <h2>Welcome to our site!</h2>
+      <h1>About Us</h1>
+      <h2>Who are we?</h2>
 
     </div>
 
 <!--could use class 'twobytwo' to separate divs in an arranged in a 2x2 grid, for the 4 of us?-->
 
-    <div>
-      <p>We am currently learning to code with <a href="https://www.codefirstgirls.org.uk/">Code First Girls</a>. Going over everything from how the
-      internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
-      Everyone should learn to code, here are some pretty good reasons why...</p>
+<div>
+<div class="names">
+  <p>Caroline</p>
+</div>
 
-      <div id='social-buttons'>
-        <button class='btn btn-lg btn-twitter'>Twitter</button>
-        <button class='btn btn-lg btn-facebook'>Facebook</button>
-        <button class='btn btn-lg btn-Instagram'>Instagram</button>
-        <button class='btn btn-lg btn-pinterest'>Pinterest</button>
-      </div>
+<div class="text">
+  <p>Blah blah Blah</p>
+</div>
+</div>
+
+<div>
+<div class="names">
+  <p>Kirsty</p>
+</div>
+
+<div class="text">
+  <p>Blah blah Blah</p>
+</div>
+</div>
+
+<div>
+<div class="names">
+  <p>Gabrielle</p>
+</div>
+
+<div class="text">
+    <p>Blah blah Blah</p>
+</div>
+</div>
+
+<div>
+<div class="names">
+  <p>Olivia</p>
+</div>
+
+<div class="text">
+  <p>Blah blah Blah</p>
+</div>
+</div>
+
+<div id="social_bar">
+  <form role='form'>
+    <span class="form_label" for="email">Sign up to our offers!</span>
+    <input type="text" class="full_width spa_form_field" name="email" >
+    <button class="btn btn-success submit_button" type="submit">Send</button>
+  </form>
+  <div id='social-buttons'>
+    <button class='btn btn-lg btn-twitter float_right'>Twitter</button>
+    <button class='btn btn-lg btn-facebook float_right'>Facebook</button>
+    <button class='btn btn-lg btn-Instagram float_right'>Instagram</button>
+    <button class='btn btn-lg btn-pinterest float_right'>Pinterest</button>
+  </div>
+</div>
 
       <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
   </body>
