Update about us
Text for about us page

--- a/WEBSITE/HTML/About us.html
+++ b/WEBSITE/HTML/About us.html
@@ -31,9 +31,11 @@
 </div>
 
 <div class="text">
-  <p>Blah blah Blah</p>
+  <p>Caroline is our cool, creative mastermind! Her signature crepe recipes will make your mouth water, whether your favourites are savoury or sweet. Caroline is also an amazing artist, so if you ever want one of our crepe creations for a special occasion, just let us know and Caroline with magic up any design.</p>
 </div>
 </div>
+
+<br>
 
 <div>
 <div class="names">
@@ -41,9 +43,11 @@
 </div>
 
 <div class="text">
-  <p>Blah blah Blah</p>
+  <p>Kirsty is our event planner! Whether it's a birthday, wedding, christening or the Christmas markets she's there! She is happy to cater for all ages and a party any size (the bigger the better though!). As well as our delicious food and drink Kirsty will be happy to organise entertainment and venues for your crepe event!</p>
 </div>
 </div>
+
+<br>
 
 <div>
 <div class="names">
@@ -51,9 +55,11 @@
 </div>
 
 <div class="text">
-    <p>Blah blah Blah</p>
+    <p>Our head chef Gabrielle is our newest member of staff, who has come straight from Paris. Having recently finished her training with the top patisserie chefs in the world, we are very excited to see what she brings to the team - and to the table. Sneak preview her signature crepe a la 'orange is out of this world ...</p>
 </div>
 </div>
+
+<br>
 
 <div>
 <div class="names">
@@ -61,9 +67,11 @@
 </div>
 
 <div class="text">
-  <p>Blah blah Blah</p>
+  <p>Olivia is our Crazy Crepe manager, lover of all things sweet and sugary her favourite crepe is berries and cream! We snatched Olivia up from the high flying business world 6 years ago and she's not looked back since.</p>
 </div>
 </div>
+
+<br>
 
 <div id="social_bar">
   <form role='form'>
