--- a/WEBSITE/HTML/Menu.html
+++ b/WEBSITE/HTML/Menu.html
@@ -20,25 +20,42 @@
     <div id="menu_block">
       <br><br><br><br><br>
       <h2>Any topping you want - we don't give a crepe!</h2><br>
-      <h4>You can find a pdf version of the menu here <a href=""> </a> </h4>
 
 <!--the divs are arranged in a 2x2 grid-->
       <div class="twobytwo">
-        <h3>Sweet</h3>
+        <h3>Savoury</h3>
+        <li>Egg (scrambled, fried or poached)</li>
+        <li>Bacon and egg</li>
+        <li>Ham and cheese</li>
+        <li>Tuna</li>
+        <li>Bacon and maple syrup</li>
       </div>
 
-      <div class="twobytwo">
-        <h3>Savoury</h3>
-      </div>
+        <div class="twobytwo">
+          <h3>Sweet</h3>
+<li>Caramelised bananas</li>
+<li>Mixed berried and whipped crème</li>
+<li>Nutella and strawberries</li>
+<li>Oreo and ice cream</li>
+</div>
 
       <div class="twobytwo">
         <h3>Drinks</h3>
+        <li>Soft drink (Fanta, Coca-Cola, Sprite)</li>
+        <li>Milkshake (Strawberry, Vanilla, Banana or Chocolate)</li>
+        <li>Tea</li>
+        <li>American</li>
+        <li>Latte</li>
+        <li>Cappuccino</li>
       </div>
 
       <div class="twobytwo">
         <h3>Our Team Recommendations</h3>
+        <p>Coming soon...</p>
       </div>
     </div>
+
+<br><br><br><br><br><br>
 
     <div id="social_bar">
       <form role='form'>
